CAMBIO DE COLOR BORDE index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ https://templatemo.com/tm-528-elegance
                     border-radius: 50%;
                     object-fit: cover;
                     margin-bottom: 30px;
-                    border: 3px solid #4CAF50; /* Borde verde */
+                    border: 3px solid #0A9599; /* Borde */
                 }
             </style>
             
